# GGAssembler

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  requirments.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml
.history/dawdlib/: __main___20250419171136.py  __main___20250419171226.py
benchmarks/: README.md  bench_colorful_path.py  bench_colorful_real_data.py
dawdlib/: __main__.py  exact_construct.py  gate_data.py
dawdlib/create_embl/: create_embl.py  embl_maker.py
dawdlib/degenerate_dna/: alg_x.py  codon_dict_generator.py  codon_graph_generator.py  codon_selector.py  codon_utils.py  deg_table.py  structs.py  utils.py
dawdlib/dijkstra/: colorful.cpp  colorful.py  colorful.pyx  colorful_algorithm.cpp  colorful_algorithm.pyx  colorful_utils.py  cpp_priority_queue.hpp  len_limit.py
dawdlib/embl_utils/: create_embl.py  embl_maker.py
dawdlib/finding_best_path/: finding_best_path.py
dawdlib/gg_dc_combine/: combine_dc_gates.py  gg_dc_combine.py
dawdlib/golden_gate/: FileS01_T4_01h_25C.csv  clique_finder.py  constants.py  dijkstra.py  find_gg.py  gate.py  gate_data.py  gate_restriction.py  gg_dc_planner.py  gg_path_finder.py  graph_maker.py  nice_tree_decomposition.py  reaction_sim.py  utils.py
example/: chosen_18Dec.resfile  colab_oligos_design.ipynb  deg_table.csv  embl.embl  gg_oligos_design.ipynb  idt_order.csv  input.resfile  to_order_df.csv  w_features.gb  wt_dna.fasta
src/: colourful_dijkstra_impl.rs  degenerate_dna.py  gate_data.py  gg_dc_planner.py  lib.rs
(+42 files in other folders)
