[package]
name = "colourful_dijksta"
version = "0.1.0"
authors = ["hochshi <hochshi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
petgraph = "0.5.1"
num-traits = "0.2.14"
ordered-float = "5.3.0"

[lib]
name = "colourful_dijksta"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.25.1"
features = ["extension-module"]
